Fix overflowing words in tippy

--- a/customize.dist/src/less2/include/tippy.less
+++ b/customize.dist/src/less2/include/tippy.less
@@ -7,7 +7,7 @@
         box-shadow: 2px 2px 10px #000;
         font-weight: bold;
         color: #333;
-        word-wrap: break-word;
+        overflow-wrap: break-word;
         [x-circle] {
             background-color: unset;
         }
